Do not mix declarations with code.

https://bugzilla.gnome.org/show_bug.cgi?id=781298